# hpc-buesst1

./: .gitignore  README.md  cuda_kernel.py  hpc_fs24_mc2_teil2.ipynb  nsc_fp64_vs_fp32.ncu-rep  nsc_fp64_vs_fp32.py  nsc_shared_memory.ncu-rep  nsc_shared_memory.py  nss_streams.py  profile_script.sh  pyproject.toml  run_kernels.py  test.py
src/: utils.py
src/kernels/: global_mem.py  shared_mem.py
