[tool.poetry]
name = "hpc-mc2-buesst1"
version = "0.1.0"
description = ""
authors = ["Tobias Buess <tobias.buess2001@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
imageio = "^2.36.0"
matplotlib = "^3.9.2"
scikit-image = "^0.24.0"
numba = "^0.60.0"
ipykernel = "^6.29.5"
pandas = "^2.2.3"
seaborn = "^0.13.2"
black = "^24.10.0"
tqdm = "^4.67.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
